--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -45,6 +45,7 @@ noinst_PROGRAMS = test_system \
                   test_proxy_single_socket \
                   test_proxy_terminate \
                   test_many_sockets \
+                  test_ipc_wildcard \
                   test_stream_empty
 
 if !ON_MINGW
@@ -95,6 +96,7 @@ test_inproc_connect_SOURCES = test_inproc_connect.cpp
 test_issue_566_SOURCES = test_issue_566.cpp
 test_abstract_ipc_SOURCES = test_abstract_ipc.cpp
 test_many_sockets_SOURCES = test_many_sockets.cpp
+test_ipc_wildcard_SOURCES = test_ipc_wildcard.cpp
 test_proxy_single_socket_SOURCES = test_proxy_single_socket.cpp
 test_proxy_terminate_SOURCES = test_proxy_terminate.cpp
 test_stream_empty_SOURCES = test_stream_empty.cpp
