--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -41,7 +41,8 @@ noinst_PROGRAMS = test_system \
                   test_issue_566 \
                   test_abstract_ipc \
                   test_proxy_terminate \
-                  test_many_sockets
+                  test_many_sockets \
+                  test_stream_empty
 
 if !ON_MINGW
 noinst_PROGRAMS += test_shutdown_stress \
@@ -90,6 +91,7 @@ test_issue_566_SOURCES = test_issue_566.cpp
 test_abstract_ipc_SOURCES = test_abstract_ipc.cpp
 test_many_sockets_SOURCES = test_many_sockets.cpp
 test_proxy_terminate_SOURCES = test_proxy_terminate.cpp
+test_stream_empty_SOURCES = test_stream_empty.cpp
 if !ON_MINGW
 test_shutdown_stress_SOURCES = test_shutdown_stress.cpp
 test_pair_ipc_SOURCES = test_pair_ipc.cpp testutil.hpp
