add tests for #949

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,6 +23,8 @@ set(tests
         test_stream_empty
         test_stream_disconnect
         test_disconnect_inproc
+        test_unbind_inproc
+        test_unbind_wildcard
         test_ctx_options
         test_ctx_destroy
         test_security_null
