--- a/builds/msvc/vs2010/libzmq/libzmq.vcxproj.filters
+++ b/builds/msvc/vs2010/libzmq/libzmq.vcxproj.filters
@@ -235,6 +235,9 @@
     <ClCompile Include="..\..\..\..\src\mailbox_safe.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\src\decoder_allocators.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\include\zmq_utils.h">
@@ -511,6 +514,9 @@
       <Filter>src\include</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\condition_variable.hpp">
+      <Filter>src\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\decoder_allocators.hpp">
       <Filter>src\include</Filter>
     </ClInclude>
   </ItemGroup>
