Do not use ldconfig in CI if running on OSX
ldconfig is not available on OSX, so Travis CI build fails

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_script:
 
 #   libsodium
 - git clone git://github.com/jedisct1/libsodium.git
-- ( cd libsodium; ./autogen.sh; ./configure; make check; sudo make install; sudo ldconfig )
+- ( cd libsodium; ./autogen.sh; ./configure; make check; sudo make install;
+      if [ $TRAVIS_OS_NAME != "osx" ] ; then sudo ldconfig ; fi )
 
 #   Build and check this project
 script:
