--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
 - ./autogen.sh
 - ./configure && make check
 - sudo make install
-- sudo ldconfig
+- if [ $TRAVIS_OS_NAME != "osx" ] ; then sudo ldconfig ; fi
 - cd ..
 
 #   Build and check libzmq
