Increase file limit in travis config
Test cases occasionally fail, especially on OSX, due to socket limit.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,10 @@ before_script:
 - if [ $TRAVIS_OS_NAME != "osx" ] ; then sudo ldconfig ; fi
 - cd ..
 
+# ZMQ stress tests need more open socket (files) than the usual default
+# On OSX, it seems the way to set the max files limit is constantly changing, so
+# try to use all known knobs to ensure compatibility across various versions
+- if [ $TRAVIS_OS_NAME == "osx" ] ; then sudo sysctl -w kern.maxfiles=64000 ; sudo sysctl -w kern.maxfilesperproc=64000 ; sudo launchctl limit maxfiles 64000 64000 ; fi ; ulimit -n 64000
+
 #   Build and check libzmq
 script: ./autogen.sh && ./configure && make V=1 && make check
