Increase file limit in travis config
Test cases occasionally fail, especially on OSX, due to socket limit.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,11 @@ before_script:
 - ( cd libsodium; ./autogen.sh; ./configure; make check; sudo make install;
       if [ $TRAVIS_OS_NAME != "osx" ] ; then sudo ldconfig ; fi )
 
+# ZMQ stress tests need more open socket (files) than the usual default
+# On OSX, it seems the way to set the max files limit is constantly changing, so
+# try to use all known knobs to ensure compatibility across various versions
+- if [ $TRAVIS_OS_NAME == "osx" ] ; then sudo sysctl -w kern.maxfiles=64000 ; sudo sysctl -w kern.maxfilesperproc=64000 ; sudo launchctl limit maxfiles 64000 64000 ; fi ; ulimit -n 64000
+
 #   Build and check this project
 script:
 - ./autogen.sh && ./configure && make && make check
