--- a/configure.ac
+++ b/configure.ac
@@ -569,6 +569,7 @@ AC_CONFIG_FILES([ \
     Makefile \
     src/libzmq.pc \
     doc/Makefile \
+    builds/Makefile \
     builds/msvc/Makefile \
     builds/redhat/zeromq.spec])
 
