add tests for polling on thread safe sockets

--- a/Makefile.am
+++ b/Makefile.am
@@ -366,7 +366,8 @@ test_apps = \
 	tests/test_thread_safe \
 	tests/test_socketopt_hwm \
 	tests/test_heartbeats \
-	tests/test_stream_exceeds_buffer
+	tests/test_stream_exceeds_buffer \
+	tests/test_thread_safe_polling
 
 tests_test_system_SOURCES = tests/test_system.cpp
 tests_test_system_LDADD = src/libzmq.la
@@ -576,6 +577,10 @@ tests_test_heartbeats_LDADD = src/libzmq.la
 
 tests_test_stream_exceeds_buffer_SOURCES = tests/test_stream_exceeds_buffer.cpp
 tests_test_stream_exceeds_buffer_LDADD = src/libzmq.la
+
+tests_test_thread_safe_polling_SOURCES = tests/test_thread_safe_polling.cpp
+tests_test_thread_safe_polling_LDADD = src/libzmq.la
+
 
 if !ON_MINGW
 if !ON_CYGWIN
