--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -53,6 +53,7 @@ set(tests
 	test_sockopt_hwm
         test_heartbeats
         test_thread_safe_polling
+        test_poller
 )
 if(NOT WIN32)
   list(APPEND tests
