--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,17 +10,34 @@ environment:
   CMAKE_GENERATOR: "Visual Studio 14 2015"
   MSVCVERSION: "v140"
   MSVCYEAR: "vs2015"
+  matrix:
+    - platform: Win32
+      configuration: Release
+      WITH_SODIUM: ON
+      WITH_TWEETNACL: OFF
+    - platform: Win32
+      configuration: Release
+      WITH_SODIUM: ON
+      WITH_TWEETNACL: OFF
+    - platform: x64
+      configuration: Debug
+      WITH_SODIUM: ON
+      WITH_TWEETNACL: OFF
+    - platform: x64
+      configuration: Debug
+      WITH_SODIUM: ON
+      WITH_TWEETNACL: OFF
+    - platform: Win32
+      configuration: Release
+      WITH_SODIUM: OFF
+      WITH_TWEETNACL: OFF
+    - platform: Win32
+      configuration: Release
+      WITH_SODIUM: OFF
+      WITH_TWEETNACL: ON
 
 matrix:
   fast_finish: false
-
-platform:
-  - Win32
-  - x64
-
-configuration:
-  - Release
-  - Debug
 
 init:
   #- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
@@ -45,8 +62,7 @@ before_build:
   - cmd: set LIBZMQ_BUILDDIR=C:\projects\build_libzmq
   - cmd: md "%LIBZMQ_BUILDDIR%"
   - cd "%LIBZMQ_BUILDDIR%"
-  - cmd: cmake -D CMAKE_INCLUDE_PATH="%SODIUM_INCLUDE_DIR%" -D CMAKE_LIBRARY_PATH="%SODIUM_LIBRARY_DIR%" -D CMAKE_C_FLAGS_RELEASE="/MT" -D CMAKE_C_FLAGS_DEBUG="/MTd" -G "%CMAKE_GENERATOR%" "%APPVEYOR_BUILD_FOLDER%"
-
+  - cmd: cmake -D CMAKE_INCLUDE_PATH="%SODIUM_INCLUDE_DIR%" -D CMAKE_LIBRARY_PATH="%SODIUM_LIBRARY_DIR%" -D WITH_SODIUM="%WITH_SODIUM%" -D WITH_TWEETNACL="%WITH_TWEETNACL%" -D CMAKE_C_FLAGS_RELEASE="/MT" -D CMAKE_C_FLAGS_DEBUG="/MTd" -D WITH_SODIUM="%WITH_SODIUM%" -G "%CMAKE_GENERATOR%" "%APPVEYOR_BUILD_FOLDER%"
 
 build:
   parallel: true
@@ -56,11 +72,10 @@ build:
 after_build:
   - cmd: cd %LIBZMQ_BUILDDIR%\bin\%Configuration%"
   - cmd: copy "%SODIUM_LIBRARY_DIR%\libsodium.dll" .
-  # Pack the artifacts
   - cmd: 7z a -y -bd -mx=9 libzmq.zip *.exe *.dll
   - ps: Push-AppveyorArtifact "libzmq.zip" -Filename "libzmq-${env:Platform}-${env:Configuration}.zip"
+
+test_script:
   - cmd: cd "%LIBZMQ_BUILDDIR%"
   - cmd: ctest -C "%Configuration%" -V
 
-test:
-  none
