cmake: libzmq can now be built with both sodium and TweetNaCL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ if(WITH_SODIUM)
   endif()
 endif()
 
-if(WITH_TWEETNACL AND NOT SODIUM_FOUND)
+if(WITH_TWEETNACL)
   message(STATUS "Building with TweetNaCL")
   set(USE_TWEETNACL ON)
   add_definitions(-DHAVE_TWEETNACL)
