appveyor: build all relevant combinations
problem: not all configurations were built (and some were duplicated) in
Windows CI
solution: add all correct combinations to appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,22 +14,26 @@ environment:
     - platform: Win32
       configuration: Release
       WITH_SODIUM: ON
-      WITH_TWEETNACL: OFF
+      WITH_TWEETNACL: ON
     - platform: Win32
+      configuration: Debug
+      WITH_SODIUM: ON
+      WITH_TWEETNACL: ON
+    - platform: x64
       configuration: Release
       WITH_SODIUM: ON
-      WITH_TWEETNACL: OFF
+      WITH_TWEETNACL: ON
     - platform: x64
       configuration: Debug
       WITH_SODIUM: ON
-      WITH_TWEETNACL: OFF
-    - platform: x64
-      configuration: Debug
-      WITH_SODIUM: ON
-      WITH_TWEETNACL: OFF
+      WITH_TWEETNACL: ON
     - platform: Win32
       configuration: Release
       WITH_SODIUM: OFF
+      WITH_TWEETNACL: OFF
+    - platform: Win32
+      configuration: Release
+      WITH_SODIUM: ON
       WITH_TWEETNACL: OFF
     - platform: Win32
       configuration: Release
