Fix a typo in reference to with_norm_ext.

--- a/configure.ac
+++ b/configure.ac
@@ -479,7 +479,7 @@ AC_MSG_CHECKING("with_norm_ext = ${with_norm_ext}")
 if test "x$with_norm_ext" != "xno"; then
     AC_DEFINE(ZMQ_HAVE_NORM, 1, [Have NORM protocol extension])
 
-    if test "x$wwith_norm_ext" != "xyes"; then
+    if test "x$with_norm_ext" != "xyes"; then
         norm_path="${with_norm_ext}"
         LIBZMQ_EXTRA_CXXFLAGS="-I${norm_path}/include ${LIBZMQ_EXTRA_CXXFLAGS}"
         LIBZMQ_EXTRA_LDFLAGS="-I${norm_path}/include ${LIBZMQ_EXTRA_LDFLAGS}"
