--- a/.gitignore
+++ b/.gitignore
@@ -143,7 +143,7 @@ builds/msvc/**/*.user
 builds/msvc/**/*Debug
 builds/msvc/**/*Release
 builds/redhat/zeromq.spec
-builds/qt-android/prefix/
+builds/android/prefix/
 packaging/nuget/*.nupkg
 foreign/openpgm/*
 !foreign/openpgm/*.tar.bz2
