--- a/builds/msvc/vs2013/inproc_thr/inproc_thr.props
+++ b/builds/msvc/vs2013/inproc_thr/inproc_thr.props
@@ -14,7 +14,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir)..\..\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>Advapi32.lib;Rpcrt4.lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Advapi32.lib;Rpcrt4.lib;Ws2_32.lib;Iphlpapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>    
   </ItemDefinitionGroup>
 
