Problem: no support for OpenWRT
Solution: copy ZeroMQ packaging script from
https://github.com/vperron/openwrt-zmq-packages

Note: this is not usable as-such, needs fixing.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 syntax: glob # for hg-git users
-Makefile
+/Makefile
+builds/Makefile
+builds/msvc/Makefile
+configure
+doc/Makefile
 Makefile.in
 configure
 libtool
