include tweetnacl in dist
backport zeromq/libzmq#1707

--- a/Makefile.am
+++ b/Makefile.am
@@ -608,6 +608,7 @@ EXTRA_DIST = \
 	MAINTAINERS	\
 	src/libzmq.pc.cmake.in \
 	src/libzmq.vers \
+	tweetnacl \
 	tools/curve_keygen.cpp
 
 MAINTAINERCLEANFILES = \
