--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,7 @@ test_stream_exceeds_buffer
 test_poller
 test_timers
 test_radio_dish
+test_udp
 test_large_msg
 tests/test*.log
 tests/test*.trs
